Se arregló la referencia a la bibliografía
La referencia de la bibliografía tenía un espacio extra

No encontraba la bibliografía

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 *.aux
+*.log
+mainNotesTemplate.bbl
+mainNotesTemplate.blg
+mainNotesTemplate.glg
+mainNotesTemplate.glo
+mainNotesTemplate.gls
+mainNotesTemplate.ist
+mainNotesTemplate.log
+mainNotesTemplate.out
+mainNotesTemplate.pdf
+mainNotesTemplate.synctex.gz
+mainNotesTemplate.toc
