--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,23 @@
 *.aux
+*.glo
+*.idx
 *.log
-mainNotesTemplate.bbl
-mainNotesTemplate.blg
-mainNotesTemplate.glg
-mainNotesTemplate.glo
-mainNotesTemplate.gls
-mainNotesTemplate.ist
-mainNotesTemplate.log
-mainNotesTemplate.out
-mainNotesTemplate.synctex.gz
-mainNotesTemplate.toc
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
